# GaussianBeam

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  GaussianBeam.pro  INSTALL  README.md  TODO  release.sh
gaussianbeam.app/Contents/: Info.plist
gaussianbeam.app/Contents/MacOS/: gaussianbeam
gui/: GaussianBeam.qrc  GaussianBeamDelegate.cpp  GaussianBeamDelegate.h  GaussianBeamLoad.cpp  GaussianBeamModel.cpp  GaussianBeamModel.h  GaussianBeamPlot.cpp  GaussianBeamPlot.h  GaussianBeamSave.cpp  GaussianBeamWidget.cpp  GaussianBeamWidget.h  GaussianBeamWidget.ui  GaussianBeamWindow.cpp  GaussianBeamWindow.h  GaussianBeamWindow.ui  Names.cpp  Names.h  OpticsView.cpp  OpticsView.h  OpticsViewProperties.ui  OpticsWidgets.cpp  OpticsWidgets.h  Unit.cpp  Unit.h  main.cpp
gui/xslt/: 1_0_to_1_1.xsl  1_1_to_1_2.xsl  gaussianbeam_1_2.dtd
po/: GaussianBeam_fr.ts  po.pri
src/: Cavity.cpp  Cavity.h  Delegate.h  Function.cpp  Function.h  GaussianBeam.cpp  GaussianBeam.h  GaussianFit.cpp  GaussianFit.h  Optics.cpp  Optics.h  OpticsBench.cpp  OpticsBench.h  OpticsFunction.cpp  OpticsFunction.h  Statistics.h  Utils.cpp  Utils.h  lmmin.c  lmmin.h
test/: test.cpp
www/: index.html  style.css
